# credit-risk-scoring

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
credit_risk_scoring/: __init__.py  dataset.py  features.py  plots.py
credit_risk_scoring/modeling/: predict.py  train.py
notebooks/: 01_eda.ipynb
