[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "credit_risk_scoring"
version = "0.0.1"
description = "Modelo de scoring de riesgo de cr\u00e9dito con XGBoost e interpretabilidad SHAP, enmarcado en el contexto regulatorio Basel IRB e IFRS 9."
authors = [
  { name = "I\u00f1igo Ochoa" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["credit_risk_scoring"]
force_sort_within_sections = true


