[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Credit Risk Scoring"
version = "0.0.1"
description = "Modelo de scoring de riesgo de cr\u00e9dito con XGBoost e interpretabilidad SHAP, enmarcado en el contexto regulatorio Basel IRB e IFRS 9."
authors = [
  { name = "I\u00f1igo Ochoa" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
]
ignore = ["E501"]  # line too long (ya controlado por line-length)

[tool.ruff.lint.isort]
known-first-party = ["credit_risk_scoring"]

[tool.ruff.format]
quote-style = "double"
